# lavalink-rs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml  reconnect.diff
.github/workflows/: python.yml  python_build.yml  release.yml
.vim/: coc-settings.json
docs/: index.html  lavalink_rs.html  search.js
docs/lavalink_rs/: model.html
docs/lavalink_rs/model/: client.html  events.html  http.html  player.html  search.html  track.html
examples/: basic_play.rs  basic_queue.rs
examples/WIP_basic_queue/: Cargo.toml  README.md
examples/WIP_basic_queue/src/: main.rs
examples/basic_play/: Cargo.toml
examples/basic_play/src/: main.rs
examples/basic_queue/: Cargo.toml
examples/basic_queue/src/: main.rs
examples/poise_basic_queue/: Cargo.toml
examples/poise_basic_queue/src/: main.rs
examples/poise_example/: Cargo.toml
examples/poise_example/src/: main.rs  music_advanced.rs  music_basic.rs  music_events.rs
examples/py_hikari_lightbulb/: bot.py  lavalink_voice.py  utils.py
examples/py_hikari_lightbulb/plugins/: music_advanced.py  music_base.py  music_basic.py
examples/py_hikari_pure/: lavalink_voice.py  main.py
examples/serenity_basic_queue/: Cargo.toml
examples/serenity_basic_queue/src/: main.rs
examples/twilight_basic_queue/: Cargo.toml
examples/twilight_basic_queue/src/: main.rs
lavalink_rs/: __init__.py  __init__.pyi
lavalink_rs/model/: __init__.pyi  client.pyi  events.pyi  http.pyi  player.pyi  search.pyi  track.pyi
lavalink_rs_macros/: Cargo.toml
lavalink_rs_macros/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: builders.rs  client.rs  discord_gateway.rs  error.rs  event_loops.rs  gateway.rs  http.rs  lib.rs  main.rs  model.rs  node.rs  nodes.rs  prelude.rs  voice.rs
src/model/: client.rs  events.rs  http.rs  mod.rs  player.rs  search.rs  track.rs
src/player_context/: context.rs  inner.rs  mod.rs
src/python/: client.rs  event.rs  http.rs  mod.rs  node.rs  player.rs
src/python/model/: client.rs  events.rs  http.rs  mod.rs  player.rs  search.rs  track.rs
