[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "lavasnek"
requires-python = ">=3.8"
#classifiers = [
#    "Programming Language :: Rust",
#    "Programming Language :: Python :: Implementation :: CPython",
#    "Programming Language :: Python :: Implementation :: PyPy",
#]

[tool.maturin]
default-features = false
features = ["python", "rustls", "user-data"]
