[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "lavalink_rs"
requires-python = ">=3.8,<3.13"
#classifiers = [
#    "Programming Language :: Rust",
#    "Programming Language :: Python :: Implementation :: CPython",
#    "Programming Language :: Python :: Implementation :: PyPy",
#]

[tool.maturin]
default-features = false
features = ["python", "rustls"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportMissingTypeStubs = true
reportUnnecessaryTypeIgnoreComment = "warning"
reportUninitializedInstanceVariable = "error"
reportShadowedImports = "warning"
include = ["model"]
