[package]
name = "lavalink_rs_macros"
version = "0.1.0"
edition = "2021"
authors = ["Alex M. M. <acdenissk69@gmail.com>", "vicky5124 <vickyf5124@gmail.com>"]
description = "Hook macro extracted from the `command_attr` crate"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "1"
