[package]
name = "basic_play"
version = "0.1.0"
authors = ["nitsuga5124 <nitsuga5124@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity-lavalink]
path = "../../"

[dependencies.serenity]
git = "https://github.com/acdenisSK/serenity/"
branch = "await_next"
features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]

[dependencies.tokio]
version = "0.2"
features = ["macros"]
