[package]
name = "poise_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
futures = "0.3"

[dependencies.poise]
version = "0.5"
default-features = false
features = ["cache", "chrono", "handle_panics"]

[dependencies.songbird]
version = "0.3"
default-features = false
features = ["gateway", "serenity-native"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.hook]
git = "https://github.com/arqunis/hook"

[dependencies.lavalink-rs]
path = "../../"
default-features = false
features = ["songbird", "serenity-native", "native-tls"]
