[package]
name = "poise_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
futures = "0.3"

[dependencies.poise]
version = "0.6"
default-features = false
features = ["cache", "chrono", "handle_panics"]

[dependencies.songbird]
version = "0.4"
default-features = false
features = ["gateway", "serenity", "native"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.lavalink-rs]
path = "../../"
default-features = false
features = ["songbird", "serenity", "native-tls", "macros"]
