[package]
name = "serenity_basic_queue"
version = "0.1.0"
authors = ["vicky5124 <vickyf5124@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.lavalink-rs]
path = "../../"
default-features = false
features = ["rustls", "serenity", "simple-gateway"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serenity]
version = "0.10"
features = ["client", "cache", "standard_framework", "voice"]

[dependencies.songbird]
version = "0.2"
default-features = false
features = ["serenity-rustls", "gateway"]
