[package]
name = "twilight_basic_queue"
version = "0.1.0"
authors = ["nitsuga5124 <nitsuga5124@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-model = "0.3"
twilight-command-parser = "0.3"

tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.lavalink-rs]
path = "../../"
features = ["rustls", "twilight"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.songbird]
version = "^0.1.3"
default-features = false
features = ["twilight-rustls", "gateway", "stock-zlib"]
